--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <div class="loader">
+            <div class="loader__item-1"></div>
+            <div class="loader__item-2"></div>
+            <div class="loader__item-3"></div>
+        </div>
         <header class="header">
             <a href="./index.html" class="header__logo">
                 <img src="img/logo/ohmyfood@2x.svg" alt="Ohmyfood logo">
@@ -176,8 +181,8 @@
                     <a href="#" class="footer__link">
                         Mentions légales
                     </a>
-                <li>
                 </li>
+                <li>
                     <a href="#" class="footer__link">
                         Contact
                     </a>
