--- a/la-palette-du-gout.html
+++ b/la-palette-du-gout.html
@@ -8,6 +8,7 @@
         <meta name="description" content="Projet Ohmyfood de OpenClassrooms, site de reservation de repas en ligne"/>
         <script src="https://kit.fontawesome.com/406da18a0b.js" crossorigin="anonymous" defer></script>
         <title>Ohmyfood - La palette du goût</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <header class="header">
@@ -17,6 +18,7 @@
             <a href="./index.html" class="header__logo">
                 <img src="img/logo/ohmyfood@2x.svg" alt="Ohmyfood logo">
             </a>
+            <div></div>
         </header>
         <main class="restaurantPage">
             <img src="img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût" class="restaurantPage__img">
@@ -24,171 +26,212 @@
                 <h1>
                     La palette du goût
                 </h1>
-                <i class="far fa-heart restaurant__heart--empty"></i>
-                <i class="fas fa-heart restaurant__heart--full"></i>
+                <div class="restaurant__heart">
+                    <i class="far fa-heart restaurant__heart--empty"></i>
+                    <i class="fas fa-heart restaurant__heart--full"></i>
+                </div>
             </div>
             <div class="restaurantPage__menu">
                 <div class="menuCategory">
                     <h2 class="menuCategory__title">
                         ENTRÉES
                     </h2>
+                    <hr/>
                     <ol>
                         <li class="menuCard">
-                            <h3 class="menuCard__title">
-                                Fricassée d'escargot
-                            </h3>
                             <div class="menuCard__details">
-                                <p>
-                                    Au piment d'espelette
-                                </p>
-                                <p class="menuCard__price">
-                                    25€
-                                </p>
+                                <h3 class="menuCard__title">
+                                    Fricassée d'escargot
+                                </h3>
+                                <div class="menuCard__description">
+                                    <p>
+                                        Au piment d'espelette
+                                    </p>
+                                    <p class="menuCard__price">
+                                        25€
+                                    </p>
+                                </div>
                             </div>
                             <div class="menuCard__checkIcon">
-                                <i class="fas fa-check"></i>
+                                <div class="wrapIcon">
+                                    <i class="fas fa-check"></i>
+                                </div>
                             </div>
                         </li>
                         <li class="menuCard">
-                            <h3 class="menuCard__title">
-                                Foie gras de canard mi-cuit
-                            </h3>
                             <div class="menuCard__details">
-                                <p>
-                                    Et ses copeaux de truffe noire
-                                </p>
-                                <p class="menuCard__price">
-                                    35€
-                                </p>
+                                <h3 class="menuCard__title">
+                                    Foie gras de canard mi-cuit
+                                </h3>
+                                <div class="menuCard__description">
+                                    <p>
+                                        Et ses copeaux de truffe noire
+                                    </p>
+                                    <p class="menuCard__price">
+                                        35€
+                                    </p>
+                                </div>
                             </div>
                             <div class="menuCard__checkIcon">
-                                <i class="fas fa-check"></i>
+                                <div class="wrapIcon">
+                                    <i class="fas fa-check"></i>
+                                </div>
                             </div>
                         </li>
                         <li class="menuCard">
-                            <h3 class="menuCard__title">
-                                Oeuf au plat
-                            </h3>
                             <div class="menuCard__details">
-                                <p>
-                                    Assaisonné à la truffe sur lit de caviar
-                                </p>
-                                <p class="menuCard__price">
-                                    20€
-                                </p>
+                                <h3 class="menuCard__title">
+                                    Oeuf au plat
+                                </h3>
+                                <div class="menuCard__description">
+                                    <p>
+                                        Assaisonné à la truffe sur lit de caviar
+                                    </p>
+                                    <p class="menuCard__price">
+                                        20€
+                                    </p>
+                                </div>
                             </div>
                             <div class="menuCard__checkIcon">
-                                <i class="fas fa-check"></i>
+                                <div class="wrapIcon">
+                                    <i class="fas fa-check"></i>
+                                </div>
                             </div>
                         </li>
                     </ol>
                 </div>
-                <div class="menuCategory">
-                    <h2>
+                <div class="menuCategory delay-1">
+                    <h2 class="menuCategory__title">
                         PLATS
                     </h2>
+                    <hr/>
                     <ol>
                         <li class="menuCard">
-                            <h3 class="menuCard__title">
-                                Filet de boeuf aux herbes
-                            </h3>
                             <div class="menuCard__details">
-                                <p>
-                                    Accompagné de sa ribambelle de légumes
-                                </p>
-                                <p class="menuCard__price">
-                                    40€
-                                </p>
+                                <h3 class="menuCard__title">
+                                    Filet de boeuf aux herbes
+                                </h3>
+                                <div class="menuCard__description">
+                                    <p>
+                                        Accompagné de sa ribambelle de légumes
+                                    </p>
+                                    <p class="menuCard__price">
+                                        40€
+                                    </p>
+                                </div>
                             </div>
                             <div class="menuCard__checkIcon">
-                                <i class="fas fa-check"></i>
+                                <div class="wrapIcon">
+                                    <i class="fas fa-check"></i>
+                                </div>
                             </div>
                         </li>
                         <li class="menuCard">
-                            <h3 class="menuCard__title">
-                                Parmentier de queue de boeuf
-                            </h3>
                             <div class="menuCard__details">
-                                <p>
-                                    À la truffe noire sur sa purée de panais
-                                </p>
-                                <p class="menuCard__price">
-                                    35€
-                                </p>
+                                <h3 class="menuCard__title">
+                                    Parmentier de queue de boeuf
+                                </h3>
+                                <div class="menuCard__description">
+                                    <p>
+                                        À la truffe noire sur sa purée de panais
+                                    </p>
+                                    <p class="menuCard__price">
+                                        35€
+                                    </p>
+                                </div>
                             </div>
                             <div class="menuCard__checkIcon">
-                                <i class="fas fa-check"></i>
+                                <div class="wrapIcon">
+                                    <i class="fas fa-check"></i>
+                                </div>
                             </div>
                         </li>
                         <li class="menuCard">
-                            <h3 class="menuCard__title">
-                                Filet de turbot
-                            </h3>
                             <div class="menuCard__details">
-                                <p>
-                                    Aux agrumes
-                                </p>
-                                <p class="menuCard__price">
-                                    44€
-                                </p>
+                                <h3 class="menuCard__title">
+                                    Filet de turbot
+                                </h3>
+                                <div class="menuCard__description">
+                                    <p>
+                                        Aux agrumes
+                                    </p>
+                                    <p class="menuCard__price">
+                                        44€
+                                    </p>
+                                </div>
                             </div>
                             <div class="menuCard__checkIcon">
-                                <i class="fas fa-check"></i>
+                                <div class="wrapIcon">
+                                    <i class="fas fa-check"></i>
+                                </div>
                             </div>
                         </li>
                     </ol>
                 </div>
-                <div class="menuCategory">
-                    <h2>
+                <div class="menuCategory delay-2">
+                    <h2 class="menuCategory__title">
                         DESSERTS
                     </h2>
+                    <hr/>
                     <ol>
                         <li class="menuCard">
-                            <h3 class="menuCard__title">
-                                Paris-Brest
-                            </h3>
                             <div class="menuCard__details">
-                                <p>
-                                    Revisité
-                                </p>
-                                <p class="menuCard__price">
-                                    18€
-                                </p>
+                                <h3 class="menuCard__title">
+                                    Paris-Brest
+                                </h3>
+                                <div class="menuCard__description">
+                                    <p>
+                                        Revisité
+                                    </p>
+                                    <p class="menuCard__price">
+                                        18€
+                                    </p>
+                                </div>
                             </div>
                             <div class="menuCard__checkIcon">
-                                <i class="fas fa-check"></i>
+                                <div class="wrapIcon">
+                                    <i class="fas fa-check"></i>
+                                </div>
                             </div>
                         </li>
                         <li class="menuCard">
-                            <h3 class="menuCard__title">
-                                Macaron au chocolat d'exception
-                            </h3>
                             <div class="menuCard__details">
-                                <p>
-                                    Et glace à la vanille de Madagascar
-                                </p>
-                                <p class="menuCard__price">
-                                    22€
-                                </p>
+                                <h3 class="menuCard__title">
+                                    Macaron au chocolat d'exception
+                                </h3>
+                                <div class="menuCard__description">
+                                    <p>
+                                        Et glace à la vanille de Madagascar
+                                    </p>
+                                    <p class="menuCard__price">
+                                        22€
+                                    </p>
+                                </div>
                             </div>
                             <div class="menuCard__checkIcon">
-                                <i class="fas fa-check"></i>
+                                <div class="wrapIcon">
+                                    <i class="fas fa-check"></i>
+                                </div>
                             </div>
                         </li>
                         <li class="menuCard">
-                            <h3 class="menuCard__title">
-                                Mousse au chocolat
-                            </h3>
                             <div class="menuCard__details">
-                                <p>
-                                    Au piment d'Espelette et à la truffe noire
-                                </p>
-                                <p class="menuCard__price">
-                                    23€
-                                </p>
+                                <h3 class="menuCard__title">
+                                    Mousse au chocolat
+                                </h3>
+                                <div class="menuCard__description">
+                                    <p>
+                                        Au piment d'Espelette et à la truffe noire
+                                    </p>
+                                    <p class="menuCard__price">
+                                        23€
+                                    </p>
+                                </div>
                             </div>
                             <div class="menuCard__checkIcon">
-                                <i class="fas fa-check"></i>
+                                <div class="wrapIcon">
+                                    <i class="fas fa-check"></i>
+                                </div>
                             </div>
                         </li>
                     </ol>
@@ -201,7 +244,9 @@
             </div>
         </main>
         <footer class="footer">
-            <img src="img/logo/ohmyfood@2x.svg" alt="Ohmyfood" class="footer__logo">
+            <h2 class="footer__title">
+                ohmyfood
+            </h2>    
             <ul class="footer__links">
                 <li>
                     <a href="#" class="footer__link">
@@ -219,8 +264,8 @@
                     <a href="#" class="footer__link">
                         Mentions légales
                     </a>
-                <li>
                 </li>
+                <li>
                     <a href="#" class="footer__link">
                         Contact
                     </a>
